Add keyboard shortcuts. Press '?' for full list.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -137,6 +137,82 @@
 			<button id="settings-save" class="ui__button" type="button">Save</button>
 		</div>
 
+		<div id="keyboard-shortcuts-dialog" class="ui modal dialog hidden">
+			<div class="ui__section-header">Keyboard Shortcuts</div>
+			<div class="ui__section-body">
+				<table class="ui__table">
+					<tr>
+						<td><strong>Track Selection</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><kbd>1</kbd>-<kbd>0</kbd></td>
+						<td>Play track at index 1-10 in current directory</td>
+					</tr>
+					<tr>
+						<td><strong>Player Controls</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><kbd>Space</kbd></td>
+						<td>Pause/unpause playback</td>
+					</tr>
+					<tr>
+						<td><kbd>]</kbd></td>
+						<td>Next track</td>
+					</tr>
+					<tr>
+						<td><kbd>[</kbd></td>
+						<td>Previous track</td>
+					</tr>
+					<tr>
+						<td><kbd>f</kbd></td>
+						<td>Toggle favorite status for currently playing track</td>
+					</tr>
+					<tr>
+						<td><kbd>'</kbd></td>
+						<td>Seek forward 10 seconds</td>
+					</tr>
+					<tr>
+						<td><kbd>;</kbd></td>
+						<td>Seek backward 10 seconds</td>
+					</tr>
+					<tr>
+						<td><strong>Navigation</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><kbd>Backspace</kbd></td>
+						<td>Navigate to top level directory</td>
+					</tr>
+					<tr>
+						<td><kbd>\</kbd></td>
+						<td>Navigate to parent directory</td>
+					</tr>
+					<tr>
+						<td><kbd>&lt;</kbd></td>
+						<td>Go back in browser history</td>
+					</tr>
+					<tr>
+						<td><kbd>&gt;</kbd></td>
+						<td>Go forward in browser history</td>
+					</tr>
+					<tr>
+						<td><strong>Other</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><kbd>s</kbd></td>
+						<td>Open settings dialog</td>
+					</tr>
+					<tr>
+						<td><kbd>?</kbd></td>
+						<td>Show this keyboard shortcuts dialog</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
 		<div id="about-dialog" class="ui modal dialog hidden">
 			<div class="ui__section-header">About</div>
 			<div class="ui__section-body">
