Add alternate left-handed keyboard shortcuts.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -158,11 +158,11 @@
 						<td>Pause/unpause playback</td>
 					</tr>
 					<tr>
-						<td><kbd>]</kbd></td>
+						<td><kbd>]</kbd> or <kbd>w</kbd></td>
 						<td>Next track</td>
 					</tr>
 					<tr>
-						<td><kbd>[</kbd></td>
+						<td><kbd>[</kbd> or <kbd>q</kbd></td>
 						<td>Previous track</td>
 					</tr>
 					<tr>
@@ -170,11 +170,11 @@
 						<td>Toggle favorite status for currently playing track</td>
 					</tr>
 					<tr>
-						<td><kbd>'</kbd></td>
+						<td><kbd>'</kbd> or <kbd>s</kbd></td>
 						<td>Seek forward 10 seconds</td>
 					</tr>
 					<tr>
-						<td><kbd>;</kbd></td>
+						<td><kbd>;</kbd> or <kbd>a</kbd></td>
 						<td>Seek backward 10 seconds</td>
 					</tr>
 					<tr>
@@ -202,7 +202,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td><kbd>s</kbd></td>
+						<td><kbd>t</kbd></td>
 						<td>Open settings dialog</td>
 					</tr>
 					<tr>
