Add keyboard shortcuts for playing favorites.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -178,6 +178,10 @@
 						<td>Seek backward 10 seconds</td>
 					</tr>
 					<tr>
+						<td><kbd>=</kbd> or <kbd>`</kbd></td>
+						<td>Play favorites in current directory</td>
+					</tr>
+					<tr>
 						<td><strong>Navigation</strong></td>
 						<td></td>
 					</tr>
