Clarify description of = and ` keys.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -179,7 +179,7 @@
 					</tr>
 					<tr>
 						<td><kbd>=</kbd> or <kbd>`</kbd></td>
-						<td>Play favorites in current directory</td>
+						<td>Play favorites under current directory</td>
 					</tr>
 					<tr>
 						<td><strong>Navigation</strong></td>
