Add shortcut to open track/cover image in new tab.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -182,6 +182,10 @@
 						<td>Play favorites under current directory</td>
 					</tr>
 					<tr>
+						<td><kbd>c</kbd></td>
+						<td>Open cover image in new tab</td>
+					</tr>
+					<tr>
 						<td><strong>Navigation</strong></td>
 						<td></td>
 					</tr>
