Add `g` keyboard shortcut to go to dir of currently playing track.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -198,6 +198,10 @@
 						<td>Navigate to parent directory</td>
 					</tr>
 					<tr>
+						<td><kbd>g</kbd></td>
+						<td>Go to current track directory</td>
+					</tr>
+					<tr>
 						<td><kbd>&lt;</kbd></td>
 						<td>Go back in browser history</td>
 					</tr>
