Reorganize keyboard shortcut dialog.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -146,16 +146,8 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td><kbd>1</kbd>-<kbd>0</kbd></td>
+						<td><kbd>1</kbd> through <kbd>0</kbd></td>
 						<td>Play track at index 1-10 in current directory</td>
-					</tr>
-					<tr>
-						<td><strong>Player Controls</strong></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td><kbd>Space</kbd></td>
-						<td>Pause/unpause playback</td>
 					</tr>
 					<tr>
 						<td><kbd>]</kbd> or <kbd>w</kbd></td>
@@ -164,6 +156,18 @@
 					<tr>
 						<td><kbd>[</kbd> or <kbd>q</kbd></td>
 						<td>Previous track</td>
+					</tr>
+					<tr>
+						<td><kbd>=</kbd> or <kbd>`</kbd></td>
+						<td>Play favorites under current directory</td>
+					</tr>
+					<tr>
+						<td><strong>Player Controls</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><kbd>Space</kbd></td>
+						<td>Pause/unpause playback</td>
 					</tr>
 					<tr>
 						<td><kbd>f</kbd></td>
@@ -178,10 +182,6 @@
 						<td>Seek backward 10 seconds</td>
 					</tr>
 					<tr>
-						<td><kbd>=</kbd> or <kbd>`</kbd></td>
-						<td>Play favorites under current directory</td>
-					</tr>
-					<tr>
 						<td><kbd>c</kbd></td>
 						<td>Open cover image in new tab</td>
 					</tr>
@@ -191,11 +191,11 @@
 					</tr>
 					<tr>
 						<td><kbd>Backspace</kbd></td>
-						<td>Navigate to top level directory</td>
+						<td>Go to top level directory</td>
 					</tr>
 					<tr>
 						<td><kbd>\</kbd></td>
-						<td>Navigate to parent directory</td>
+						<td>Go to parent directory</td>
 					</tr>
 					<tr>
 						<td><kbd>g</kbd></td>
