Add optional desktop notifications when next track plays.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -134,6 +134,21 @@
 				</table>
 			</div>
 
+			<div class="ui__section-header">Notifications</div>
+			<div class="ui__section-body">
+				<table class="ui__table">
+					<tr>
+						<td>When next track plays</td>
+						<td>
+							<label>
+								<input id="settings-desktop-notifications" type="checkbox" />
+								Enabled
+							</label>
+						</td>
+					</tr>
+				</table>
+			</div>
+
 			<button id="settings-save" class="ui__button" type="button">Save</button>
 		</div>
 
