Seek +-30s instead of 10s when holding shift.

--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -190,11 +190,11 @@
 					</tr>
 					<tr>
 						<td><kbd>'</kbd> or <kbd>s</kbd></td>
-						<td>Seek forward 10 seconds</td>
+						<td>Seek forward 10s (30s with <kbd>Shift</kbd>)</td>
 					</tr>
 					<tr>
 						<td><kbd>;</kbd> or <kbd>a</kbd></td>
-						<td>Seek backward 10 seconds</td>
+						<td>Seek backward 10s (30s with <kbd>Shift</kbd>)</td>
 					</tr>
 					<tr>
 						<td><kbd>c</kbd></td>
