--- a/cmd/aurelius/assets/html/main.html
+++ b/cmd/aurelius/assets/html/main.html
@@ -71,8 +71,13 @@
 						favorite
 					</i>
 				</div>
-				<span id="about-button" class="controls__link controls__bottom-left">aurelius</span>
-				<span id="duration" class="controls__bottom-right"></span>
+				<div class="controls__bottom">
+					<span id="about-button" class="controls__link controls__bottom-left"
+						>aurelius</span
+					>
+					<span class="controls__bottom-center"></span>
+					<span id="duration" class="controls__bottom-right"></span>
+				</div>
 			</div>
 		</nav>
 
